--- a/src/orders/src/main/resources/application.properties
+++ b/src/orders/src/main/resources/application.properties
@@ -1,16 +1,17 @@
+spring.application.name=orders
 server.port=${port:8082}
+server.tomcat.max-threads=2
+
+spring.main.lazy-initialization=true
+
 endpoints.health.enabled=false
 spring.zipkin.baseUrl=http://${zipkin_host:zipkin}:9411/
 spring.zipkin.enabled=${zipkin_enabled:false}
 spring.sleuth.sampler.percentage=1.0
-spring.application.name=orders
+spring.jmx.enabled=false
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
-
-management.endpoints.web.exposure.include=*
-management.endpoint.metrics.enabled=true
-management.endpoint.prometheus.enabled=true
-management.metrics.export.prometheus.enabled=true
 
 logging.level.mushop.*=INFO
 
