--- a/src/orders/build.gradle
+++ b/src/orders/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'org.springframework.boot' version '2.2.0.RELEASE'
+	id 'org.springframework.boot' version '2.3.0.RELEASE'
 	id 'java'
 }
 
@@ -29,8 +29,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-jetty'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'io.nats:jnats:2.6.6'
-  implementation 'com.h2database:h2:1.4.200'
+    implementation 'com.h2database:h2:1.4.200'
 	runtimeOnly    'com.oracle.ojdbc:ojdbc8:19.3.0.0'
 	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
