jdbc lib versions are mmanaged purely in the gradle file. Dockerfile sets up a "latest" path for the tns entries, and the helm chart is updated to map the wallet files secret object to this "latest" path mapping.

--- a/src/orders/Dockerfile
+++ b/src/orders/Dockerfile
@@ -1,7 +1,6 @@
 # Application Metadata
 ARG APPLICATION_NAME="orders"
 ARG VERSION="0.0.1-SNAPSHOT"
-ARG clientVersion=19.3
 
 # ------------
 # Stage 1 : Setup the build environment
@@ -37,8 +36,7 @@ RUN gradle --refresh-dependencies
 FROM buildenv as appbuild
 ARG APPLICATION_NAME
 ARG VERSION
-ENV INSTANT_CLIENT_VERSION=${clientVersion}
-# Copy the source code. 
+# Copy the source code.
 # This layer is recreated only when there are actual source chnages 
 COPY src /usr/src/app/src
 
@@ -53,7 +51,6 @@ RUN ls -ltr /usr/src/app/build/libs
 FROM openjdk:13-slim
 ARG APPLICATION_NAME
 ARG VERSION
-ARG clientVersion
 
 RUN apt-get update && apt-get install -y procps
 
@@ -64,7 +61,8 @@ EXPOSE 80
 WORKDIR /app
 ENV APPLICATION_NAME=${APPLICATION_NAME}
 ENV VERSION=${VERSION}
-ENV TNS_ADMIN=/usr/lib/oracle/${clientVersion}/client64/lib/network/admin/
+# Edit the helm chart to map
+ENV TNS_ADMIN=/usr/lib/oracle/latest/client64/lib/network/admin/
 ENTRYPOINT java $JAVA_OPTS -jar /app/${APPLICATION_NAME}-${VERSION}.jar --port=80
 #
 # ------------
