--- a/src/orders/build.gradle
+++ b/src/orders/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'io.nats:jnats:2.6.6'
   implementation 'com.h2database:h2:1.4.200'
-	runtimeOnly    'com.oracle.ojdbc:ojdbc8:19.3.0.0'
+	runtimeOnly    'com.oracle.database.jdbc:ojdbc8:19.6.0.0'
 	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	
