--- a/deploy/complete/docker-compose/docker-compose.yml
+++ b/deploy/complete/docker-compose/docker-compose.yml
@@ -132,7 +132,7 @@ services:
 
   # OCI Orders service
   orders:
-    image: mushop-orders:local
+    image: iad.ocir.io/oracle/ateam/mushop-orders:2.1.1
     ports:
       - 8085:80
       # - 9091:9091
