--- a/deploy/complete/terraform/schema.yaml
+++ b/deploy/complete/terraform/schema.yaml
@@ -46,6 +46,18 @@ variableGroups:
     - mushop_atp
     - mushop_oss
     visible: true
+  - title: "MuShop Utilities"
+    variables:
+    - grafana_enabled
+    - prometheus_enabled
+    - ingress-nginx_enabled
+    - cert-manager_enabled
+    - metrics-server_enabled
+    - catalog_enabled
+    visible:
+      eq:
+      - ${show_advanced}
+      - Yes
   - title: "Advanced Options"
     variables:
     - show_advanced
@@ -53,7 +65,9 @@ variableGroups:
     - public_ssh_key
     - image_operating_system
     - image_operating_system_version
-    visible: true
+    visible: #($create_new_oke_cluster = true)
+      and:
+        - create_new_oke_cluster
   - title: "Network Configuration"
     variables:
       - network_strategy 
