schema update to include new session

--- a/deploy/complete/terraform/schema.yaml
+++ b/deploy/complete/terraform/schema.yaml
@@ -53,9 +53,9 @@ variableGroups:
     variables:
     - grafana_enabled
     - prometheus_enabled
-    - ingress_nginx_enabled
-    - cert_manager_enabled
-    - metrics_server_enabled
+    - ingress-nginx_enabled
+    - cert-manager_enabled
+    - metrics-server_enabled
     - catalog_enabled
     visible:
       eq:
@@ -244,13 +244,10 @@ variables:
         - "Yes"
 
   public_ssh_key:
-    type: oci:core:ssh:publickey
-    title: "Import your own SSH public key"
-    additionalProps:
-      allowMultiple: true
+    type: string
+    title: "Input SSH public key"
     description: "In order to access your private nodes with a public SSH key you will need to set up a bastion host (a.k.a. jump box). If using public nodes, bastion is not needed. Left blank to not import keys."
     required: false
-    pattern: "((^(ssh-rsa AAAAB3NzaC1yc2|ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNT|ecdsa-sha2-nistp384 AAAAE2VjZHNhLXNoYTItbmlzdHAzODQAAAAIbmlzdHAzOD|ecdsa-sha2-nistp521 AAAAE2VjZHNhLXNoYTItbmlzdHA1MjEAAAAIbmlzdHA1Mj|ssh-ed25519 AAAAC3NzaC1lZDI1NTE5|ssh-dss AAAAB3NzaC1kc3)[0-9A-Za-z+\/]+[=]{0,3})( [^,]*)?)(,((ssh-rsa AAAAB3NzaC1yc2|ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNT|ecdsa-sha2-nistp384 AAAAE2VjZHNhLXNoYTItbmlzdHAzODQAAAAIbmlzdHAzOD|ecdsa-sha2-nistp521 AAAAE2VjZHNhLXNoYTItbmlzdHA1MjEAAAAIbmlzdHA1Mj|ssh-ed25519 AAAAC3NzaC1lZDI1NTE5|ssh-dss AAAAB3NzaC1kc3)[0-9A-Za-z+\/]+[=]{0,3})( [^,]*)?)*$"
     visible: #($show_advanced  == ""Yes"") + ($generate_public_ssh_key  == "false")
       and:
         - eq:
@@ -414,7 +411,7 @@ outputs:
   mushop_url_button:
       type: link
       title: MuShop URL Button
-      displayText: Open MuShop
+      displayText: MuShop Storefront
   mushop_url:
     type: link
     title: MuShop
