SSH key schema text

--- a/deploy/complete/terraform/schema.yaml
+++ b/deploy/complete/terraform/schema.yaml
@@ -218,7 +218,7 @@ variables:
 
   public_ssh_key:
     type: oci:core:ssh:publickey
-    title: "Input SSH public key"
+    title: "Import your own SSH public key"
     additionalProps:
       allowMultiple: true
     description: "In order to access your private nodes with a public SSH key you will need to set up a bastion host (a.k.a. jump box). If using public nodes, bastion is not needed. Left blank to not import keys."
