--- a/src/orders/build.gradle
+++ b/src/orders/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-jetty'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'io.nats:jnats:2.6.6'
     implementation 'com.h2database:h2:1.4.200'
 	runtimeOnly    'com.oracle.ojdbc:ojdbc8:19.3.0.0'
