--- a/src/orders/src/main/resources/application.properties
+++ b/src/orders/src/main/resources/application.properties
@@ -4,6 +4,8 @@ server.tomcat.max-threads=2
 
 spring.main.lazy-initialization=true
 
+management.endpoints.web.exposure.enabled=*
+
 endpoints.health.enabled=false
 spring.zipkin.baseUrl=http://${zipkin_host:zipkin}:9411/
 spring.zipkin.enabled=${zipkin_enabled:false}
