--- a/src/orders/src/main/resources/application.properties
+++ b/src/orders/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.tomcat.max-threads=2
 
 spring.main.lazy-initialization=true
 
-management.endpoints.web.exposure.enabled=*
+management.endpoints.web.exposure.include=*
 
 endpoints.health.enabled=false
 spring.zipkin.baseUrl=http://${zipkin_host:zipkin}:9411/
