--- a/src/orders/build.gradle
+++ b/src/orders/build.gradle
@@ -1,9 +1,9 @@
 plugins {
 	id 'org.springframework.boot' version '2.3.0.RELEASE'
+	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
 }
 
-apply plugin: 'io.spring.dependency-management'
 
 group = 'mushop.orders'
 version = '0.0.1-SNAPSHOT'
@@ -35,15 +35,15 @@ dependencies {
     implementation 'com.h2database:h2:1.4.200'
 	runtimeOnly    'com.oracle.ojdbc:ojdbc8:19.3.0.0'
 	
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+    exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+  }
 	
 	testImplementation 'com.openpojo:openpojo:0.8.12'
 	
 }
 
-
-dependencyManagement {
-     imports {
-          mavenBom "org.springframework.cloud:spring-cloud-dependencies:Greenwich.SR1"
-     }
+test {
+  useJUnitPlatform()
 }
+
