enable actuator based health endpoints

--- a/src/orders/src/main/resources/application.properties
+++ b/src/orders/src/main/resources/application.properties
@@ -5,6 +5,9 @@ server.tomcat.max-threads=2
 spring.main.lazy-initialization=true
 
 management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.endpoint.health.show-components=always
+management.health.probes.enabled=true
 
 endpoints.health.enabled=false
 spring.zipkin.baseUrl=http://${zipkin_host:zipkin}:9411/
