Enabled eager initialization and metrics autowiring.

--- a/src/orders/src/main/resources/application.properties
+++ b/src/orders/src/main/resources/application.properties
@@ -2,14 +2,13 @@ spring.application.name=orders
 server.port=${port:8082}
 server.tomcat.max-threads=2
 
-spring.main.lazy-initialization=true
+spring.main.lazy-initialization=false
 
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 management.endpoint.health.show-components=always
 management.health.probes.enabled=true
 
-endpoints.health.enabled=false
 spring.zipkin.baseUrl=http://${zipkin_host:zipkin}:9411/
 spring.zipkin.enabled=${zipkin_enabled:false}
 spring.sleuth.sampler.percentage=1.0
@@ -17,6 +16,7 @@ spring.jmx.enabled=false
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.generate_statistics=true
 
 logging.level.mushop.*=INFO
 
