--- a/src/orders/build.gradle
+++ b/src/orders/build.gradle
@@ -32,7 +32,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'io.nats:jnats:2.6.6'
-    implementation 'com.h2database:h2:1.4.200'
+	runtimeOnly 	 'io.micrometer:micrometer-registry-prometheus'
+  runtimeOnly		 'com.h2database:h2:1.4.200'
 	runtimeOnly    'com.oracle.ojdbc:ojdbc8:19.3.0.0'
 	
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
