--- a/deploy/complete/helm-chart/setup/values.yaml
+++ b/deploy/complete/helm-chart/setup/values.yaml
@@ -48,6 +48,10 @@ grafana:
         gnetId: 6336
         revision: 1
         datasource: Prometheus
+      spring-boot:
+        gnetId: 12464
+        revision: 2
+        datasource: Prometheus
   dashboardProviders:
     dashboardproviders.yaml:
       apiVersion: 1
