--- a/deploy/complete/helm-chart/mushop/charts/orders/templates/orders-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/orders/templates/orders-deployment.yaml
@@ -33,6 +33,25 @@ spec:
           ports:
             - name: http
               containerPort: 80
+          livenessProbe:
+            initialDelaySeconds: 30
+            periodSeconds: 15
+            failureThreshold: 5
+            httpGet:
+              path: /actuator/health/liveness
+              port: http
+          readinessProbe:
+            initialDelaySeconds: 30
+            periodSeconds: 5
+            httpGet:
+              path: /actuator/health/liveness
+              port: http
+          startupProbe:
+            failureThreshold: 9
+            periodSeconds: 10
+            httpGet:
+              path: /actuator/health/liveness
+              port: http
           env:
             - name: ZIPKIN
               value: {{ .Values.env.zipkin }}
