--- a/src/fulfillment/micronaut-cli.yml
+++ b/src/fulfillment/micronaut-cli.yml
@@ -1,5 +1,6 @@
-profile: service
+applicationType: default
 defaultPackage: mushop
----
 testFramework: spock
 sourceLanguage: java
+buildTool: gradle
+features: [annotation-api, app-name, docker, file-watch, graalvm, gradle, http-client, java, java-application, logback, netty-server, readme, shade, spock, yaml]
