Added management endpoints and enabled metrics reporting.

--- a/src/fulfillment/build.gradle
+++ b/src/fulfillment/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     implementation("javax.annotation:javax.annotation-api")
     implementation("io.micronaut:micronaut-http-server-netty")
     implementation("io.micronaut:micronaut-http-client")
+    implementation("io.micronaut:micronaut-management")
+    implementation("io.micronaut.micrometer:micronaut-micrometer-core")
+    implementation("io.micronaut.micrometer:micronaut-micrometer-registry-prometheus")
     implementation("io.nats:jnats:2.6.8")
     runtimeOnly("ch.qos.logback:logback-classic")
     testImplementation(platform("io.micronaut:micronaut-bom:$micronautVersion"))
