--- a/src/fulfillment/src/main/resources/application.yml
+++ b/src/fulfillment/src/main/resources/application.yml
@@ -3,6 +3,32 @@ micronaut:
     name: fulfillment
   server:
     port: 80
+  metrics:
+    enabled: true
+    export:
+      prometheus:
+        enabled: true
+        descriptions: true
+        step: PT1M
+    binders:
+      jvm:
+        enabled: true
+      web:
+        enabled: true
+      uptime:
+        enabled: true
+      processor:
+        enabled: true
+      files:
+        enabled: true
+
+
+endpoints:
+    all:
+        enabled: true
+        sensitive: false
+
+        
 
 mushop:
   messaging:
