switch to an alpine image with glibc support instead of ubuntu

--- a/src/fulfillment/Dockerfile
+++ b/src/fulfillment/Dockerfile
@@ -29,7 +29,8 @@ RUN gu install native-image
 RUN native-image --no-server  -cp libs/fulfillment-*-all.jar
 
 # Step 4 : Build the final application image
-FROM ubuntu:20.04
+FROM frolvlad/alpine-glibc
+RUN apk update && apk add libstdc++
 EXPOSE 80
 COPY --from=graalvm /home/app/fulfillment/fulfillment /app/fulfillment
 ENTRYPOINT ["/app/fulfillment", "-Djava.library.path=/app"]
