--- a/deploy/complete/helm-chart/mushop/charts/fulfillment/templates/fulfillment-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/fulfillment/templates/fulfillment-deployment.yaml
@@ -22,6 +22,9 @@ spec:
         run: {{ include "fulfillment.name" . }}
       annotations:
         sidecar.istio.io/rewriteAppHTTPProbers: "true"
+        prometheus.io/scrape: "true"
+        prometheus.io/path: /prometheus
+        prometheus.io/port: "80"
     spec:
       containers:
         - name: {{ .Chart.Name }}
