enable prometheus metrics exporter for nats

--- a/deploy/complete/helm-chart/mushop/charts/nats/templates/nats-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/nats/templates/nats-deployment.yaml
@@ -37,4 +37,19 @@ spec:
             - name: monitoring
               containerPort: 8222
               protocol: TCP
+        - name: {{ .Chart.Name }}-exporter
+          image: "{{ .Values.exporter.repository }}:{{ .Values.exporter.tag }}"
+          imagePullPolicy: {{ .Values.exporter.pullPolicy }}
+          ports:
+            - name: http
+              containerPort: 7777
+          args:
+            - -D 
+            - -varz 
+            - -channelz
+            - -connz
+            - -serverz
+            - -subz
+            - -gatewayz
+            - "http://localhost:8222"
           
