--- a/deploy/complete/helm-chart/mushop/charts/nats/values.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/nats/values.yaml
@@ -5,6 +5,11 @@ image:
   tag: 2.1.2
   pullPolicy: IfNotPresent
 
+exporter: 
+  repository: synadia/prometheus-nats-exporter
+  tag: 0.6.2
+  pullPolicy: IfNotPresent
+
 osb: {}
 
 service:
