--- a/deploy/complete/helm-chart/mushop/charts/nats/templates/nats-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/nats/templates/nats-deployment.yaml
@@ -22,6 +22,9 @@ spec:
         run: {{ include "nats.name" . }}
       annotations:
         sidecar.istio.io/rewriteAppHTTPProbers: "true"
+        prometheus.io/scrape: "true"
+        prometheus.io/path: /metrics
+        prometheus.io/port: "7777"
     spec:
       containers:
         - name: {{ .Chart.Name }}
