--- a/deploy/complete/helm-chart/mushop/charts/carts/templates/carts-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/carts/templates/carts-deployment.yaml
@@ -20,6 +20,9 @@ spec:
         mockmode: {{ .Values.global.mock.service | quote }}
       annotations:
         sidecar.istio.io/rewriteAppHTTPProbers: "true"
+        prometheus.io/scrape: "true"
+        prometheus.io/path: /metrics
+        prometheus.io/port: "80"
     spec:
       initContainers:
         {{- include "carts.init.wallet" . | nindent 8 }}
