--- a/src/carts/pom.xml
+++ b/src/carts/pom.xml
@@ -1,123 +1,119 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>io.helidon.applications</groupId>
-		<artifactId>helidon-se</artifactId>
-		<version>2.0.1</version>
-	</parent>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>io.helidon.applications</groupId>
+        <artifactId>helidon-se</artifactId>
+        <version>2.0.1</version>
+    </parent>
 
 
-	<groupId>mushop</groupId>
-	<artifactId>carts</artifactId>
-	<version>1.1.0-SNAPSHOT</version>
+    <groupId>mushop</groupId>
+    <artifactId>carts</artifactId>
+    <version>1.1.0-SNAPSHOT</version>
 
-	<name>carts</name>
-	<description>Cart service</description>
+    <name>carts</name>
+    <description>Cart service</description>
 
-	<properties>
-		<jsonb.version>1.0.2</jsonb.version>
-		<yasson.version>1.0.6</yasson.version>
-		<jdbc.version>19.6.0.0</jdbc.version>
-		<soda.version>1.1.4</soda.version>
-		<mainClass>mushop.carts.Main</mainClass>
-		<libs.classpath.prefix>libs</libs.classpath.prefix>
-		<copied.libs.dir>${project.build.directory}/${libs.classpath.prefix}</copied.libs.dir>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
+    <properties>
+        <jsonb.version>1.0.2</jsonb.version>
+        <yasson.version>1.0.6</yasson.version>
+        <jdbc.version>19.6.0.0</jdbc.version>
+        <soda.version>1.1.4</soda.version>
+        <mainClass>mushop.carts.Main</mainClass>
+        <libs.classpath.prefix>libs</libs.classpath.prefix>
+        <copied.libs.dir>${project.build.directory}/${libs.classpath.prefix}</copied.libs.dir>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
-	<dependencies>
-		<dependency>
-			<groupId>io.helidon.webserver</groupId>
-			<artifactId>helidon-webserver</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>io.helidon.webserver</groupId>
-			<artifactId>helidon-webserver-access-log</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>io.helidon.config</groupId>
-			<artifactId>helidon-config-yaml</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>io.helidon.media</groupId>
-			<artifactId>helidon-media-jsonb</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>io.helidon.health</groupId>
-			<artifactId>helidon-health</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>io.helidon.health</groupId>
-			<artifactId>helidon-health-checks</artifactId>
-		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>io.helidon.metrics</groupId>-->
-<!--			<artifactId>helidon-metrics-prometheus</artifactId>-->
-<!--		</dependency>-->
-		<dependency>
-			<groupId>io.helidon.metrics</groupId>
-			<artifactId>helidon-metrics</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.oracle.database.jdbc</groupId>
-			<artifactId>ojdbc8</artifactId>
-			<version>${jdbc.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.oracle.database.jdbc</groupId>
-			<artifactId>ucp</artifactId>
-			<version>${jdbc.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>jakarta.json.bind</groupId>
-			<artifactId>jakarta.json.bind-api</artifactId>
-			<version>${jsonb.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse</groupId>
-			<artifactId>yasson</artifactId>
-			<version>${yasson.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.oracle.database.soda</groupId>
-			<artifactId>soda</artifactId>
-			<version>${soda.version}</version>
-		</dependency>
+    <dependencies>
+        <dependency>
+            <groupId>io.helidon.webserver</groupId>
+            <artifactId>helidon-webserver</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.helidon.webserver</groupId>
+            <artifactId>helidon-webserver-access-log</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.helidon.config</groupId>
+            <artifactId>helidon-config-yaml</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.helidon.media</groupId>
+            <artifactId>helidon-media-jsonb</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.helidon.health</groupId>
+            <artifactId>helidon-health</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.helidon.health</groupId>
+            <artifactId>helidon-health-checks</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.helidon.metrics</groupId>
+            <artifactId>helidon-metrics</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <version>${jdbc.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ucp</artifactId>
+            <version>${jdbc.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.json.bind</groupId>
+            <artifactId>jakarta.json.bind-api</artifactId>
+            <version>${jsonb.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse</groupId>
+            <artifactId>yasson</artifactId>
+            <version>${yasson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.oracle.database.soda</groupId>
+            <artifactId>soda</artifactId>
+            <version>${soda.version}</version>
+        </dependency>
 
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>io.helidon.webclient</groupId>
-			<artifactId>helidon-webclient</artifactId>
-			<scope>test</scope>
-		</dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.helidon.webclient</groupId>
+            <artifactId>helidon-webclient</artifactId>
+            <scope>test</scope>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
-	<packaging>jar</packaging>
+    <packaging>jar</packaging>
 
-	<build>
+    <build>
 
-		<finalName>${project.artifactId}-${project.version}</finalName>
+        <finalName>${project.artifactId}-${project.version}</finalName>
 
-		<plugins>
-			<!-- Copy dependencies to target/libs -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>copy-libs</id>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
+        <plugins>
+            <!-- Copy dependencies to target/libs -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-libs</id>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
