--- a/deploy/basic/terraform/schema.yaml
+++ b/deploy/basic/terraform/schema.yaml
@@ -23,7 +23,7 @@ groupings:
 
   - title: "Optional Configuration"
     variables:
-    - ssh_public_key
+    - public_ssh_key
 
 variables:
   compartment_ocid:
@@ -53,7 +53,7 @@ variables:
     maxLength: 14
     pattern: "^[a-zA-Z][a-zA-Z0-9]+$"
 
-  ssh_public_key:
+  public_ssh_key:
     type: oci:core:ssh:publickey
     required: false
     title: "SSH Public Key"
