--- a/deploy/basic/terraform/schema.yaml
+++ b/deploy/basic/terraform/schema.yaml
@@ -9,7 +9,7 @@ version: "20190304"
 locale: "en"
 
 groupings:
-  - title: "General Configuration"
+  - title: "Basic Hidden"
     visible: false
     variables:
     - compartment_ocid
@@ -18,12 +18,22 @@ groupings:
 
   - title: "General Configuration"
     variables:
-    - database_name
+    - autonomous_database_name
     - num_nodes
 
   - title: "Optional Configuration"
     variables:
+    - generate_public_ssh_key
     - public_ssh_key
+
+  - title: "Extras Hidden"
+    variables:
+      - user_ocid
+      - fingerprint
+      - autonomous_database_db_version
+      - autonomous_database_license_model
+      - autonomous_database_is_free_tier
+    visible: false
 
 variables:
   compartment_ocid:
@@ -53,6 +63,11 @@ variables:
     maxLength: 14
     pattern: "^[a-zA-Z][a-zA-Z0-9]+$"
 
+  generate_public_ssh_key:
+    type: boolean
+    title: "Auto generate public ssh key?"
+    required: true
+
   public_ssh_key:
     type: oci:core:ssh:publickey
     required: false
@@ -61,6 +76,9 @@ variables:
     additionalProps:
       allowMultiple: true
     pattern: "((^(ssh-rsa AAAAB3NzaC1yc2|ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNT|ecdsa-sha2-nistp384 AAAAE2VjZHNhLXNoYTItbmlzdHAzODQAAAAIbmlzdHAzOD|ecdsa-sha2-nistp521 AAAAE2VjZHNhLXNoYTItbmlzdHA1MjEAAAAIbmlzdHA1Mj|ssh-ed25519 AAAAC3NzaC1lZDI1NTE5|ssh-dss AAAAB3NzaC1kc3)[0-9A-Za-z+\/]+[=]{0,3})( [^,]*)?)(,((ssh-rsa AAAAB3NzaC1yc2|ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNT|ecdsa-sha2-nistp384 AAAAE2VjZHNhLXNoYTItbmlzdHAzODQAAAAIbmlzdHAzOD|ecdsa-sha2-nistp521 AAAAE2VjZHNhLXNoYTItbmlzdHA1MjEAAAAIbmlzdHA1Mj|ssh-ed25519 AAAAC3NzaC1lZDI1NTE5|ssh-dss AAAAB3NzaC1kc3)[0-9A-Za-z+\/]+[=]{0,3})( [^,]*)?)*$"
+    visible:
+      not:
+        - generate_public_ssh_key
 
 outputGroups:
   - title: "MuShop App details"
